Added HexPrism Shape and Added more colors to the color array

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GDIPlusManager.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="HexPrism.h" />
     <ClInclude Include="IndexedLineList.h" />
     <ClInclude Include="IndexedTriangleList.h" />
     <ClInclude Include="Keyboard.h" />
