added function in graphics for drawing models with wireframe or triangles

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Mat2.h" />
     <ClInclude Include="Mat3.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Rect.h" />
