added a vec3 to vec4 converted in the vec4 class added a transformvariables class to make ti easier to have variables for each model deleted the rotated functions from game as unneeded

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Surface.h" />
+    <ClInclude Include="TransformVariables.h" />
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="Vec3.h" />
     <ClInclude Include="Vec4.h" />
