--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -137,6 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Frustum.h" />
     <ClInclude Include="GridModel.h" />
     <ClInclude Include="Orthographic.h" />
     <ClInclude Include="Perspective.h" />
