added the ability to change between different camera position with the return key. changed model.h to object.h then used model.h as a base class for the basic model types.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Frustum.h" />
     <ClInclude Include="GridModel.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="Orthographic.h" />
     <ClInclude Include="Perspective.h" />
     <ClInclude Include="PlaneModel.h" />
@@ -164,7 +165,7 @@
     <ClInclude Include="Mat2.h" />
     <ClInclude Include="Mat3.h" />
     <ClInclude Include="Mat4.h" />
-    <ClInclude Include="Model.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Rect.h" />
