--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Orthographic.h" />
     <ClInclude Include="Perspective.h" />
     <ClInclude Include="PlaneModel.h" />
+    <ClInclude Include="Terrain.h" />
     <ClInclude Include="Viewport.h" />
     <ClInclude Include="ViewTransform.h" />
     <ClInclude Include="ChiliException.h" />
