added the Vec2Color class from the interpolating colors branch. used the triangle vertices normalised to determine the colors at each vertex then interpolated between them to create a kind of gouraud shading on the model.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Terrain.h" />
     <ClInclude Include="Tetrahedron.h" />
     <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Vec2Color.h" />
     <ClInclude Include="Viewport.h" />
     <ClInclude Include="ViewTransform.h" />
     <ClInclude Include="ChiliException.h" />
